--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,6 +59,7 @@ file.reference.png-encoder-1.5.jar-1=E:\\sistema_almacen_uset\\lib\\lib_Jasper\\
 file.reference.poi-3.7.jar-1=E:\\sistema_almacen_uset\\lib\\lib_Jasper\\poi-3.7.jar
 file.reference.primefaces-5.3.jar=E:\\sistema_almacen_uset\\lib\\primefaces-5.3.jar
 file.reference.xml-apis-1.4.01.jar=E:\\sistema_almacen_uset\\lib\\lib_Jasper\\xml-apis-1.4.01.jar
+file.reference.xml-apis-ext.jar=E:\\sistema_almacen_uset\\lib\\lib_Jasper\\xml-apis-ext.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -76,19 +77,6 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.mysql-connector-java-5.0.8-bin.jar}:\
     ${file.reference.primefaces-5.3.jar}:\
-    ${file.reference.bcmail-jdk14-136.jar-1}:\
-    ${file.reference.bcprov-jdk14-136.jar-1}:\
-    ${file.reference.commons-beanutils-1.8.2.jar-1}:\
-    ${file.reference.commons-collections-3.2.1.jar-1}:\
-    ${file.reference.commons-digester-2.1.jar-1}:\
-    ${file.reference.commons-javaflow-20060411.jar-1}:\
-    ${file.reference.commons-logging-1.1.1.jar-1}:\
-    ${file.reference.groovy-all-2.1.0.jar-1}:\
-    ${file.reference.iText-2.1.7.jar-1}:\
-    ${file.reference.jasperreports-5.6.0.jar-1}:\
-    ${file.reference.jasperreports-javaflow-5.6.0.jar-1}:\
-    ${file.reference.png-encoder-1.5.jar-1}:\
-    ${file.reference.poi-3.7.jar-1}:\
     ${file.reference.barbecue-1.5-beta1.jar-1}:\
     ${file.reference.barcode4j-2.1.jar}:\
     ${file.reference.batik-anim.jar}:\
@@ -103,7 +91,21 @@ javac.classpath=\
     ${file.reference.batik-svggen.jar}:\
     ${file.reference.batik-util.jar}:\
     ${file.reference.batik-xml.jar}:\
-    ${file.reference.xml-apis-1.4.01.jar}
+    ${file.reference.bcmail-jdk14-136.jar-1}:\
+    ${file.reference.bcprov-jdk14-136.jar-1}:\
+    ${file.reference.commons-beanutils-1.8.2.jar-1}:\
+    ${file.reference.commons-collections-3.2.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-javaflow-20060411.jar-1}:\
+    ${file.reference.commons-logging-1.1.1.jar-1}:\
+    ${file.reference.groovy-all-2.1.0.jar-1}:\
+    ${file.reference.iText-2.1.7.jar-1}:\
+    ${file.reference.jasperreports-5.6.0.jar-1}:\
+    ${file.reference.jasperreports-javaflow-5.6.0.jar-1}:\
+    ${file.reference.png-encoder-1.5.jar-1}:\
+    ${file.reference.poi-3.7.jar-1}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.xml-apis-ext.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
